Fix InputText cursor jumping to end when typing in the middle

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,3 +84,8 @@ input.p-inputtext {
     width: auto !important;
   }
 }
+
+/* Не показываем последнюю рамку в таблице */
+.no-bottom-border tr:last-child td {
+  border-bottom: none !important;
+}
